--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <div class="daftaralatmusik">
 
                 <div class="alatmusik">
+                    <div class="fav-icon" onclick="toggleFavorite(this)">☆</div>
                         <div class="bingkaigambar">
                             <img src="images/totobuang.jpg" alt="Totobuang">
                         </div>
@@ -341,6 +342,7 @@
 
                 <div class="alatmusik">
                     <div class="bingkaigambar">
+                        <div class="fav-icon" onclick="toggleFavorite(this)">☆</div>
                             <img src="images/tifapapua.jpg" alt="Tifa Papua">
                         </div>
 
@@ -549,6 +551,7 @@
 
                 <div class="alatmusik">
                     <div class="bingkaigambar">
+                        <div class="fav-icon" onclick="toggleFavorite(this)">☆</div>
                             <img src="images/butshake.png" alt="Butshake">
                         </div>
 
@@ -592,6 +595,7 @@
 
                 <div class="alatmusik">
                     <div class="bingkaigambar">
+                        <div class="fav-icon" onclick="toggleFavorite(this)">☆</div>
                             <img src="images/tatali.jpg" alt="Tatali">
                         </div>
 
