--- a/html/index.html
+++ b/html/index.html
@@ -106,6 +106,14 @@
                     </form>
 
                     <button id="favBtn" onclick="goToFavorites()">⭐</button> 
+
+                        <label for="sort-select-home">Urutkan Berdasarkan :</label>
+                        <select id="sort-select-home">
+                            <option value="default">Urutkan (Default)</option>
+                            <option value="nama-asc">Nama (A-Z)</option>
+                            <option value="nama-desc">Nama (Z-A)</option>
+                        </select>
+                    </div>
                 </div>
 
             </div>
