--- a/html/index.html
+++ b/html/index.html
@@ -223,7 +223,7 @@
                     <li><a href="#maluku">Maluku</a></li>
                     <li><a href="#papua">Papua</a></li>
                     <li><a href="#sulawesi">Sulawesi</a></li>
-                    <li><a href="#nusatenggara">Nusa Tenggara</a></li>
+                    <li><a href="#nt">Nusa Tenggara</a></li>
                     <li><a href="#hubungikami">Hubungi Kami</a></li>
                 </ul>
             </div>
